--- a/Schedular.API/appsettings.json
+++ b/Schedular.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost,1433;Database=NomeDoBanco;User Id=sa;Password=Zegota160505!;TrustServerCertificate=True;"
+    }, 
   "Logging": {
     "LogLevel": {
       "Default": "Information",
