--- a/Schedular.API/appsettings.json
+++ b/Schedular.API/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost,1433;Database=NomeDoBanco;User Id=sa;Password=Zegota160505!;TrustServerCertificate=True;"
+      "DefaultConnection": "Server=tcp:::1,1433;Database=SchedularDb;User Id=sa;Password=Zegota160505!;TrustServerCertificate=True;"
     }, 
   "Logging": {
     "LogLevel": {
