--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "1433:1433"
     environment:
       ACCEPT_EULA: "Y"
-      SA_PASSWORD: "Zegota160505!"
+      MSSQL_SA_PASSWORD: "Zegota160505!"
     volumes:
       - sqlserver_data:/var/opt/mssql
 volumes:
